@@ -1,3 +1,8 @@
+2008-12-28  Felix Zielcke  <fzielcke@z-51.de>
+
+	* util/getroot.c (grub_util_get_grub_dev): Add support for
+	/dev/md/dNNpNN style partitionable mdraid devices.
+
 2008-12-12  Alex Smith  <alex@alex-smith.me.uk>
 
 	* fs/i386/pc/pxe.c (grub_pxefs_open): Handle the one open connection
